--- a/HitomiScrollViewerApp/App.xaml
+++ b/HitomiScrollViewerApp/App.xaml
@@ -5,6 +5,7 @@
     xmlns:local="using:HitomiScrollViewerApp">
     <Application.Resources>
         <ResourceDictionary>
+            <x:Double x:Key="ProgressBarTrackHeight">3</x:Double>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <!-- Other merged dictionaries here -->
