--- a/HitomiScrollViewerLib/Controls/SearchPage.xaml
+++ b/HitomiScrollViewerLib/Controls/SearchPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="HitomiScrollViewerLib.Controls.Pages.SearchPage"
+    x:Class="HitomiScrollViewerLib.Controls.SearchPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
