--- a/HitomiScrollViewerLib/Controls/SearchPageComponents/TFSCheckBox.xaml
+++ b/HitomiScrollViewerLib/Controls/SearchPageComponents/TFSCheckBox.xaml
@@ -1,5 +1,5 @@
 <CheckBox
-    x:Class="HitomiScrollViewerLib.Controls.SearchPageComponents.TagFilterCheckBox"
+    x:Class="HitomiScrollViewerLib.Controls.SearchPageComponents.TFSCheckBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
