--- a/HitomiScrollViewerLib/Controls/SearchPageComponents/CRUDActionContentDialog.xaml
+++ b/HitomiScrollViewerLib/Controls/SearchPageComponents/CRUDActionContentDialog.xaml
@@ -9,13 +9,13 @@
     
     Style="{StaticResource DefaultContentDialogStyle}"
     >
-    <ContentDialog.Resources>
-        <x:Double x:Key="ContentDialogMaxWidth">4294967296</x:Double>
-        <x:Double x:Key="ActionContentDialogWidth">548</x:Double>
-    </ContentDialog.Resources>
     <ContentDialog.Title>
-        <TextBlock x:Name="TitleTextBlock"
-                   TextWrapping="WrapWholeWords"
-                   MaxWidth="{StaticResource ActionContentDialogWidth}"/>
+        <TextBlock x:Name="TitleTextBlock" TextWrapping="WrapWholeWords"/>
     </ContentDialog.Title>
+    <StackPanel x:Name="MainStackPanel" Spacing="16">
+        <ProgressBar x:Name="ActionProgressBar"
+                     IsIndeterminate="True"
+                     Visibility="Collapsed"
+                     Margin="8 0"/>
+    </StackPanel>
 </ContentDialog>
