--- a/HitomiScrollViewerLib/Controls/SearchPageComponents/CRUDActionContentDialog.xaml
+++ b/HitomiScrollViewerLib/Controls/SearchPageComponents/CRUDActionContentDialog.xaml
@@ -8,6 +8,7 @@
     mc:Ignorable="d"
     
     Style="{StaticResource DefaultContentDialogStyle}"
+    DefaultButton="Primary"
     >
     <ContentDialog.Title>
         <TextBlock x:Name="TitleTextBlock" TextWrapping="WrapWholeWords"/>
