added ctrl s shortcut for save button

--- a/HitomiScrollViewerLib/Controls/SearchPageComponents/TagFilterSetEditor.xaml
+++ b/HitomiScrollViewerLib/Controls/SearchPageComponents/TagFilterSetEditor.xaml
@@ -51,6 +51,9 @@
                 IsEnabled="False"
                 >
             <SymbolIcon Symbol="Save"/>
+            <Button.KeyboardAccelerators>
+                <KeyboardAccelerator Key="S" Modifiers="Control" />
+            </Button.KeyboardAccelerators>
         </Button>
         <Button x:Name="DeleteButton"
                 Click="DeleteButton_Click"
