--- a/HitomiScrollViewerLib/Controls/SearchPageComponents/TagTokenizingTextBox.xaml
+++ b/HitomiScrollViewerLib/Controls/SearchPageComponents/TagTokenizingTextBox.xaml
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ctk:TokenizingTextBox
+<ct:TokenizingTextBox
+    x:Name="TTTB"
     x:Class="HitomiScrollViewerLib.Controls.SearchPageComponents.TagTokenizingTextBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:ctk="using:CommunityToolkit.WinUI.Controls"
+    xmlns:ct="using:CommunityToolkit.WinUI.Controls"
     xmlns:entities="using:HitomiScrollViewerLib.Entities"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     ItemsSource="{x:Bind SelectedTags, Mode=TwoWay}"
     TextChanged="TokenizingTextBox_TextChanged"
-    TokenDelimiter="">
-    <ctk:TokenizingTextBox.SuggestedItemTemplate>
+    GotFocus="TokenizingTextBox_GotFocus"
+    TokenItemAdding="TokenizingTextBox_TokenItemAdding"
+    TokenDelimiter=""
+    >
+    <ct:TokenizingTextBox.QueryIcon>
+        <SymbolIconSource Symbol="Find"/>
+    </ct:TokenizingTextBox.QueryIcon>
+    <ct:TokenizingTextBox.SuggestedItemTemplate>
         <DataTemplate x:DataType="entities:Tag">
-            <TextBlock Text="{x:Bind Value}" />
+            <TextBlock Text="{x:Bind Value}"
+                       MaxWidth="{Binding Path=TokenTextBlockMaxWidth, ElementName=TTTB, Mode=OneWay}"
+                       TextWrapping="Wrap"/>
         </DataTemplate>
-    </ctk:TokenizingTextBox.SuggestedItemTemplate>
-    <ctk:TokenizingTextBox.TokenItemTemplate>
+    </ct:TokenizingTextBox.SuggestedItemTemplate>
+    <ct:TokenizingTextBox.TokenItemTemplate>
         <DataTemplate x:DataType="entities:Tag">
-            <TextBlock Text="{x:Bind Value}" />
+            <TextBlock Text="{x:Bind Value}"
+                       MaxWidth="{Binding Path=TokenTextBlockMaxWidth, ElementName=TTTB, Mode=OneWay}"
+                       TextWrapping="Wrap"/>
         </DataTemplate>
-    </ctk:TokenizingTextBox.TokenItemTemplate>
-</ctk:TokenizingTextBox>
+    </ct:TokenizingTextBox.TokenItemTemplate>
+</ct:TokenizingTextBox>
