now type can be used on its own to create search links

--- a/HitomiScrollViewerLib/Controls/SearchPageComponents/TagFilterSetEditor.xaml
+++ b/HitomiScrollViewerLib/Controls/SearchPageComponents/TagFilterSetEditor.xaml
@@ -84,7 +84,8 @@
         <ComboBox x:Name="GalleryTypeComboBox" ItemsSource="{x:Bind _galleryTypes}"
                   HorizontalAlignment="Stretch"
                   DisplayMemberPath="DisplayName"
-                  SelectedIndex="0">
+                  SelectedIndex="0"
+                  SelectionChanged="GalleryTypeComboBox_SelectionChanged">
         </ComboBox>
     </Grid>
     <Grid x:Name="TextBoxesGrid"
