--- a/HitomiScrollViewerLib/Controls/SearchPageComponents/TagFilterSetEditor.xaml
+++ b/HitomiScrollViewerLib/Controls/SearchPageComponents/TagFilterSetEditor.xaml
@@ -11,21 +11,44 @@
     >
     <Grid.RowDefinitions>
         <RowDefinition Height="Auto"/>
-        <RowDefinition Height="Auto"/>
         <RowDefinition Height="*"/>
         <RowDefinition Height="*"/>
     </Grid.RowDefinitions>
     <Grid x:Name="TagFilterSetControlGrid" ColumnSpacing="8">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <Border/>
+        <Grid RowSpacing="4" ColumnSpacing="16" Margin="0 0 32 0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Select Type:" Grid.Row="0" Grid.Column="0"
+                       VerticalAlignment="Center"/>
+            <ComboBox x:Name="GalleryTypeComboBox" ItemsSource="{x:Bind _galleryTypes}"
+                      Grid.Row="0" Grid.Column="1"
+                      HorizontalAlignment="Stretch"
+                      DisplayMemberPath="DisplayName"
+                      SelectedIndex="0"
+                      SelectionChanged="GalleryTypeComboBox_SelectionChanged"
+                      IsEnabled="False"/>
+            <TextBlock Text="Select Language:" Grid.Row="1" Grid.Column="0"
+                       VerticalAlignment="Center"/>
+            <spc:GLASBWrapper x:Name="GLASBWrapper"
+                              Grid.Row="1" Grid.Column="1"
+                              HorizontalAlignment="Stretch"
+                              />
+        </Grid>
         <Button x:Name="CreateButton"
                 Click="CreateButton_Click">
             <SymbolIcon Symbol="Add"/>
@@ -58,35 +81,10 @@
                 >
             <SymbolIcon Symbol="Delete"/>
         </Button>
-        <CheckBox x:Name="AutoSaveCheckBox"/>
-    </Grid>
-    <Grid x:Name="GalleryLanguageTypeGrid" ColumnSpacing="16">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="16*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="16*"/>
-        </Grid.ColumnDefinitions>
-        <TextBlock Text="Select Language:"
-                   VerticalAlignment="Center"/>
-        <ComboBox x:Name="GalleryLanguageComboBox"
-                  HorizontalAlignment="Stretch">
-            <ComboBoxItem>Any</ComboBoxItem>
-            <ComboBoxItem>English</ComboBoxItem>
-            <ComboBoxItem>Korean</ComboBoxItem>
-            <ComboBoxItem>Chinese</ComboBoxItem>
-            <ComboBoxItem>Japanese</ComboBoxItem>
-        </ComboBox>
-        <Border/>
-        <TextBlock Text="Select Type:"
-                   VerticalAlignment="Center"/>
-        <ComboBox x:Name="GalleryTypeComboBox" ItemsSource="{x:Bind _galleryTypes}"
-                  HorizontalAlignment="Stretch"
-                  DisplayMemberPath="DisplayName"
-                  SelectedIndex="0"
-                  SelectionChanged="GalleryTypeComboBox_SelectionChanged">
-        </ComboBox>
+        <CheckBox x:Name="AutoSaveCheckBox"
+                  Padding="16 0"
+                  HorizontalAlignment="Center"
+                  VerticalContentAlignment="Center"/>
     </Grid>
     <Grid x:Name="TextBoxesGrid"
           Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
