--- a/HitomiScrollViewerLib/Views/SearchPage/InputValidation.xaml
+++ b/HitomiScrollViewerLib/Views/SearchPage/InputValidation.xaml
@@ -11,17 +11,17 @@
     >
     <TextBox Grid.Row="0"
              Width="492"
-             Text="{x:Bind ViewModel.InputText}"
+             Text="{x:Bind ViewModel.InputText, Mode=TwoWay}"
              />
     <Grid Grid.Row="1" ColumnDefinitions="*,Auto">
         <TextBlock Grid.Column="0"
                    Foreground="Red"
                    HorizontalAlignment="Left"
-                   Text="{x:Bind ViewModel.ErrorMessage}"
+                   Text="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}"
                    />
         <TextBlock Grid.Column="1"
                    HorizontalAlignment="Right"
-                   Text="{x:Bind ViewModel.InputLengthDisplayText}"
+                   Text="{x:Bind ViewModel.InputLengthDisplayText, Mode=OneWay}"
                    />
     </Grid>
 </Grid>
