--- a/HitomiScrollViewerLib/Views/SearchPage/TFSCheckBox.xaml
+++ b/HitomiScrollViewerLib/Views/SearchPage/TFSCheckBox.xaml
@@ -7,5 +7,6 @@
     mc:Ignorable="d"
     MinWidth="0"
     Style="{StaticResource DefaultCheckBoxStyle}">
-    <TextBlock Text="{x:Bind TagFilterSet.Name, Mode=OneWay}" TextWrapping="Wrap"/>
+    <TextBlock TextWrapping="Wrap"
+               Text="{x:Bind TagFilterSet.Name, Mode=OneWay}"/>
 </CheckBox>
