--- a/HitomiScrollViewerLib/Views/SearchPage/TFSSelector.xaml
+++ b/HitomiScrollViewerLib/Views/SearchPage/TFSSelector.xaml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Grid
-    x:Class="HitomiScrollViewerLib.Controls.SearchPageComponents.TFSSelector"
+    x:Class="HitomiScrollViewerLib.Views.SearchPage.TFSSelector"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:communityToolkitControls="using:CommunityToolkit.WinUI.Controls"
+    xmlns:ct="using:CommunityToolkit.WinUI.Controls"
+    xmlns:entities="using:HitomiScrollViewerLib.Entities"
     mc:Ignorable="d"
-    
     Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
     BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
     CornerRadius="{StaticResource OverlayCornerRadius}"
     BorderThickness="1"
-    Padding="16"
-    RowSpacing="16">
-    <Grid.RowDefinitions>
-        <RowDefinition Height="*"/>
-    </Grid.RowDefinitions>
-    <ScrollViewer Grid.Row="1">
-        <ItemsRepeater x:Name="SearchFilterItemsRepeater" x:DefaultBindMode="TwoWay">
+    Padding="16">
+    <ScrollViewer>
+        <ItemsRepeater ItemsSource="{x:Bind ViewModel.TfsCheckBoxes, Mode=OneWay}">
             <ItemsRepeater.Layout>
-                <communityToolkitControls:WrapLayout VerticalSpacing="4" HorizontalSpacing="8"/>
+                <ct:WrapLayout VerticalSpacing="4" HorizontalSpacing="8"/>
             </ItemsRepeater.Layout>
         </ItemsRepeater>
     </ScrollViewer>
